--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,6 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_tts: ^4.0.2
   translator: ^1.0.0
-  flutter_riverpod: ^2.5.1
   confetti: ^0.7.0
   flutter_rating_bar: ^4.0.1
   badges: ^3.1.2
@@ -84,9 +83,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -99,10 +98,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Montserrat
+       fonts:
+         - asset: fonts/Montserrat-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
