--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_svg_icons: ^0.0.1+4
   #  custom_switch: ^0.0.1
   animations: ^2.0.11
+  firebase_app_check: ^0.3.0+3
+
   provider: ^6.1.2
   #  toggle_switch: ^2.0.1
   image_picker: ^1.1.2
@@ -59,6 +61,8 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   badges: ^3.1.2
   cloud_firestore: ^5.1.0
+  animated_bottom_navigation_bar: ^1.3.3
+
 
 dev_dependencies:
   flutter_test:
